chore: add more properties to wizard model
